# myFastAPIProject

./: .gitignore  README.md  data.py  dependencies.py  endpoints.py  main.py  models.py  myFastAPIProject.code-workspace  postgres_pool.py  pyproject.toml  repository.py  services.py  servises.py  settings.json — ярлык.lnk
endpoints/: holiday.py  holidays_handlers.py
models/: admin.py  admin_models.py  holiday.py  holiday_models.py  user_models.py
repositories/Holiday/: proto.py  repo.py
repositories/User/: proto.py  repo.py
samples/: main.py  main1.py  main2.py
scheme/: migration_0.sql
services/Holiday/: proto.py  service.py
services/User/: proto.py  service.py
